# pythonscad-stl-generator

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml  publish-to-pypi.yml  release-please.yml
docs/: generate-pythonscad-stls.1  generate-pythonscad-stls.1.md
src/pythonscad_stl_generator/: __init__.py  cli.py  discovery.py  presets.py  render.py
tests/: test_cli.py  test_discovery.py  test_presets.py  test_render.py
